--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,6 +7,31 @@
     </head>
 
     <body>
-        <h1>Recipe for Lasagna<h1>
+        <h1>Recipe for Lasagna</h1>
+        <img src="./images/lasagna.webp" width="1200" height="900" alt="Image of cooked lasagna">
+
+        <p>Making <strong>lasagna</strong> can be time-consuming, but the results are well worth the wait. You'll find a <em>detailed ingredient list</em> and <em>step-by-step instructions</em> in the recipe below.</p>
+
+        <h2>List of the ingredient</h2>
+        <ul>
+            <li><strong>Meat:</strong> This super meaty lasagna has sweet Italian sausage and lean ground beef.</li>
+            <li><strong>Onion and garlic:</strong> An onion and two cloves of garlic are cooked with the meat to add tons of flavor.</li>
+            <li><strong>Tomato Products:</strong> You'll need a can of crushed tomatoes, two cans of tomato sauce, and two cans of tomato paste.</li>
+            <li><strong>Sugar:</strong> Two tablespoons of white sugar add subtle sweetness and enhance the flavor of the sauce.</li>
+            <li><strong>Spices and seasonings:</strong> This lasagna recipe is flavored with fresh parsley, dried basil leaves, salt, Italian seasoning, fennel seeds, and black pepper.</li>
+            <li><strong>Lasagna noodles:</strong> Use store-bought or homemade lasagna noodles.</li>
+            <li><strong>Cheeses:</strong> Parmesan, mozzarella, and ricotta cheese make this lasagna extra decadent.</li>
+            <li><strong>Egg:</strong> An egg helps bind the ricotta so it doesn't ooze out of the lasagna when you cut into it.</li>
+        </ul>
+
+        <h2>How to make lasagna Step-By-Step:</h2>
+        <ol>
+            <li>Make the meat sauce.</li>
+            <li>Cook the noodles.</li>
+            <li>Make the ricotta mixture.</li>
+            <li>Layer the lasagna according to the recipe instructions.</li>
+            <li>Cover with foil and bake.</li>
+            <li>Let the lasagna rest before serving.</li>
+        </ol>
     </body>
 </html>
