build: Add two recipes of LIT and Chicken Broth

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/lasagna.html">Lasagna Recipe</a>
+        <ul>
+            <li><a href="./recipes/lasagna.html">Lasagna Recipe</a></li>
+            <li><a href="./recipes/lit.html">Long Island Ice Tea Recipe</a></li>
+            <li><a href="./recipes/chicken_broth.html">Chicken Broth Recipe</li>
+        </ul>
     </body>
 </html>
